feat(hypr): hypr and waybar config

--- a/modules/configs/hypr/mappings.conf
+++ b/modules/configs/hypr/mappings.conf
@@ -13,17 +13,13 @@ bind = $mainMod, Enter, exec, $terMinal
 bind = $mainMod_Control_Shift, Q, exit,
 bind = $mainMod, space, exec, pkill $launCher -9 || $launCher --show drun
 bind = $mainMod, E, exec, dolphin
-bind = $mainMod, F, togglefloating,
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, S, togglesplit, # dwindle
-bind = $mainMod, U, fullscreen
-bind = $mainMod, w, killactive,
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod_CTRL, F, togglefloating,
+bind = $mainMod_CTRL, P, pseudo, # dwindle
+bind = $mainMod_CTRL, S, togglesplit, # dwindle
+bind = $mainMod_CTRL, U, fullscreen
+
+bind = $mainMod, w, killactive,
 
 # Change focused window
 bind = $mainMod, h, movefocus, l
@@ -31,12 +27,6 @@ bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
-
-# resizeactive 
-binde = $mainMod CTRL, l, resizeactive, 10 0
-binde = $mainMod CTRL, h, resizeactive, -10 0
-binde = $mainMod CTRL, k, resizeactive, 0 -10
-binde = $mainMod CTRL, j, resizeactive, 0 10
 
 # Switch workspaces with mainMod + [0-9]
 bind = CTRL, 1, workspace, 1
