--- a/modules/configs/tmux.conf
+++ b/modules/configs/tmux.conf
@@ -69,12 +69,12 @@ bind l select-pane -R
 bind-key -n M-Tab last-window
 
 # switching windows
-bind -n M-1 run-shell 'tmux switch-client -t :1 || tmux new-window -n "1" -t :1'
-bind -n M-2 run-shell 'tmux switch-client -t :2 || tmux new-window -n "2" -t :2'
-bind -n M-3 run-shell 'tmux switch-client -t :3 || tmux new-window -n "3" -t :3'
-bind -n M-4 run-shell 'tmux switch-client -t :4 || tmux new-window -n "4" -t :4'
-bind -n M-5 run-shell 'tmux switch-client -t :5 || tmux new-window -n "5" -t :5'
-bind -n M-6 run-shell 'tmux switch-client -t :6 || tmux new-window -n "6" -t :6'
-bind -n M-7 run-shell 'tmux switch-client -t :7 || tmux new-window -n "7" -t :7'
-bind -n M-8 run-shell 'tmux switch-client -t :8 || tmux new-window -n "8" -t :8'
-bind -n M-9 run-shell 'tmux switch-client -t :9 || tmux new-window -n "9" -t :9'
+bind 1 run-shell 'tmux switch-client -t :1 || tmux new-window -n "1" -t :1'
+bind 2 run-shell 'tmux switch-client -t :2 || tmux new-window -n "2" -t :2'
+bind 3 run-shell 'tmux switch-client -t :3 || tmux new-window -n "3" -t :3'
+bind 4 run-shell 'tmux switch-client -t :4 || tmux new-window -n "4" -t :4'
+bind 5 run-shell 'tmux switch-client -t :5 || tmux new-window -n "5" -t :5'
+bind 6 run-shell 'tmux switch-client -t :6 || tmux new-window -n "6" -t :6'
+bind 7 run-shell 'tmux switch-client -t :7 || tmux new-window -n "7" -t :7'
+bind 8 run-shell 'tmux switch-client -t :8 || tmux new-window -n "8" -t :8'
+bind 9 run-shell 'tmux switch-client -t :9 || tmux new-window -n "9" -t :9'
