--- a/modules/configs/hypr/hyprland.conf
+++ b/modules/configs/hypr/hyprland.conf
@@ -11,24 +11,20 @@ env = XCURSOR_SIZE,10
 
 exec-once = waybar > /tmp/waybar.log 2>&1
 exec-once = setsid swww-daemon 
-exec-once = swww img /home/pwn/.config/hypr/wallpapers/collections/dreamy.png 
+exec-once = swww img /home/pwn/.config/hypr/wallpapers/black-pink-rose.png
 
 input {
     kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
 
     follow_mouse = 1
     repeat_delay = 250
     repeat_rate = 80
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 
-    sensitivity = 0.2
+    sensitivity = 0.1
 }
 
 general {
@@ -57,7 +53,7 @@ misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
     enable_swallow = true
-    swallow_regex = ^(ghostty|kitty|footclient)$
+    swallow_regex = ^(ghostty|kitty|footclient|mpv)$
 }
 
 
@@ -70,7 +66,6 @@ animations {
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default
-
 }
 
 dwindle {
